# cmake_boost_template

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: BoostLibs.cmake  PreventInSourceBuilds.cmake
src/: main.cpp
